# gtest-demo

.github/workflows/: test.yml
src/: Arduino.h  CMakeLists.txt  RainGauge.cpp  RainGauge.h
test/: CMakeLists.txt  RainGaugeHour.cpp  RainGaugeHourOv.cpp  RainGaugeHourShort.cpp  RainGaugeStartup.cpp  TestRainGauge.cpp  raingauge_poc.cpp
